--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-window": "^2.2.5",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
