--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@tanstack/react-query": "^5.90.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csvtojson": "^2.0.14",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.27.0",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
