--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "mongodb": "^5.9.2",
     "next": "16.1.3",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.2.3",
     "react-virtualized": "^9.22.6",
     "react-window": "^2.2.5",
