--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-virtualized": "^9.22.6",
     "react-window": "^2.2.5",
     "tailwind-merge": "^3.4.0"
